--- a/views/register.html
+++ b/views/register.html
@@ -13,7 +13,9 @@
         <section>
             <div class="logoYbusc">
                 <div class="logo">
-                    <img src="/images/logo-mercado-liebre.svg" alt="" >
+                    <a href="/">
+                        <img src="/images/logo-mercado-liebre.svg" alt="logo" >
+                    </a>
                 </div>
                 <div class="buscador">
                     <input type="text" placeholder="Buscar productos, marcas">
@@ -89,25 +91,28 @@
                 <input type="checkbox" name="Jugueteria" value="jugueteria">    Jugueteria</label>
             <label for="vidaS">
                 <input type="checkbox" name="vidaS" value="vidaS">  Vida Sana </label>
+                <input type="submit" name="enviar" class="enviar">
         </form>
     </main>
 
     <footer>
-        <i class="fa-solid fa-credit-card" style="color: #1259c3;"></i>
-        <section>
-            <b>Paga con tarjeta o en efectivo</b>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
-        </section>
-        <i class="fa-solid fa-gift" style="color: #1259c3;"></i>
-        <section>
-            <b>envio gratis desde $2500</b>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
-        </section>
-        <i class="fa-solid fa-user-shield" style="color: #1259c3;"></i>
-        <section>
-            <b>Seguridad, de principio a fin</b>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
-        </section>
+        <div class="infor">
+            <section>
+                <i class="fa-solid fa-credit-card"></i>
+                <b>Paga con tarjeta o en efectivo</b>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+            </section>
+            <section>
+                <i class="fa-solid fa-gift"></i>
+                <b>envio gratis desde $2500</b>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+            </section>
+            <section>
+                <i class="fa-solid fa-user-shield"></i>
+                <b>Seguridad, de principio a fin</b>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
+            </section>
+        </div>
         <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
