--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ header{
     width: 50%;
     
 }
-.logo img{
+.logo a img{
     display: flex;
     width: 50%;
 }
@@ -176,7 +176,7 @@ footer p{
     .logoYbusc{
         width: 50%;
     }
-    .logo img{
+    .logo a img{
         width: 100%;
     }
     .logo,.buscador,.slogan{
